--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Календарь заказов | amoCRM</title>
+    <title>Календарь заказов</title>
 
-    <!-- Подключение Bootstrap только CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,10 +12,8 @@
       crossorigin="anonymous"
     />
 
-    <!-- Локальные стили -->
     <link rel="stylesheet" href="style.css" />
 
-    <!-- Шрифты Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,9 +21,7 @@
       rel="stylesheet"
     />
 
-    <!-- Проверка локализации перед загрузкой -->
     <script>
-      // Проверяем доступность файлов локализации
       function checkLocalization() {
         const lang = navigator.language.startsWith("ru") ? "ru" : "en";
         const localizationFile = `i18n/${lang}.json`;
@@ -53,8 +48,6 @@
             };
           });
       }
-
-      // Устанавливаем заголовок на основе доступных переводов
       document.addEventListener("DOMContentLoaded", async () => {
         try {
           const translations = await checkLocalization();
@@ -68,9 +61,7 @@
     </script>
   </head>
   <body>
-    <!-- Основной контейнер -->
     <div id="widget_container" class="container-fluid px-3 py-4">
-      <!-- Заголовок виджета -->
       <header class="widget-header mb-4">
         <img
           src="images/logo_small.png"
@@ -81,9 +72,7 @@
         <h1 class="text-center mb-0">Календарь заказов</h1>
       </header>
 
-      <!-- Основное содержимое -->
       <main class="widget-content">
-        <!-- Блок календаря -->
         <section id="calendar-section" class="card mb-4">
           <div class="card-body">
             <div
@@ -115,7 +104,6 @@
           </div>
         </section>
 
-        <!-- Блок списка сделок -->
         <section id="deal-list" class="card mb-4">
           <div class="card-body">
             <h2 class="h5 mb-3">
@@ -126,7 +114,6 @@
           </div>
         </section>
 
-        <!-- Блок авторизации -->
         <section id="auth-section" class="text-center">
           <button id="authButton" class="btn btn-primary px-4">
             <span class="me-2">🔒</span>
@@ -134,7 +121,6 @@
           </button>
         </section>
 
-        <!-- Блок ошибок -->
         <div
           id="error-alert"
           class="alert alert-danger d-none"
@@ -143,18 +129,14 @@
         ></div>
       </main>
 
-      <!-- Подвал -->
       <footer class="widget-footer text-center text-muted mt-4 small">
         <p class="mb-0" id="footer-text">Виджет календаря заказов v1.0</p>
       </footer>
     </div>
 
-    <!-- Скрипты -->
     <script src="script.js"></script>
 
-    <!-- Дополнительная проверка загрузки -->
     <script>
-      // Проверка загрузки основных ресурсов
       window.addEventListener("load", () => {
         if (!document.querySelector("#calendar")) {
           console.error("Calendar element not found");
