--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Календарь заказов</title>
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <!-- Только ваш CSS (Bootstrap и Google Fonts удалены) -->
     <link rel="stylesheet" href="style.css" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
-    <div id="widget-root" class="container-fluid px-3 py-4"></div>
+    <!-- Минимальная разметка для виджета -->
+    <div id="widget-root"></div>
 
-    <div id="loader">
+    <!-- Загрузчик (опционально) -->
+    <div id="loader" style="display: none">
       <div class="loading-spinner"></div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Подключение через AMD для amoCRM -->
+    <script>
+      if (typeof define !== "function") {
+        // Режим standalone (для тестов)
+        document.addEventListener("DOMContentLoaded", function () {
+          var script = document.createElement("script");
+          script.src = "script.js";
+          document.head.appendChild(script);
+        });
+      }
+    </script>
   </body>
 </html>
