--- a/oauth_callback.html
+++ b/oauth_callback.html
@@ -19,10 +19,10 @@
             "Content-Type": "application/json",
           },
           body: JSON.stringify({
-            client_id: "8ee6c15f-ad16-4231-99ba-97b0019bcd86",
+            client_id: "7e5ad5d3-fbff-4ae3-9d77-eb03493522a0",
             client_secret:
-              "PLYQ9uazZBc1g2bcJxmbXdsNwkbWBr832C3fmGQXcYXN4ZAqWVn42wVRh2RMOJWp",
-            grant_type: "authorization_code",
+              "soraB5QC9xcDy8GtUv0gqCmcxFCxc0atJOcAK5oZrhi3upjZTRyBHQcQbOofIlVX", //885453
+            grant_type: "authorization_code", //892009
             code: code,
             redirect_uri:
               "https://alerom2006.github.io/Calendar/oauth_callback.html",
