--- a/index.html
+++ b/index.html
@@ -1,52 +1,92 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Календарь заказов</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.amocrm.ru/v2/loader.min.js"></script>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.amocrm.ru; script-src 'self' https://cdn.amocrm.ru 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self' https://*.amocrm.ru">
-</head>
-<body>
-  <div id="widget-root"></div>
-  <div id="loader">
-    <div class="loading-spinner"></div>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Календарь заказов</title>
+    <link rel="stylesheet" href="style.css" />
+    <!-- Добавляем crossorigin атрибут для CORS -->
+    <script
+      src="https://cdn.amocrm.ru/v2/loader.min.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div id="widget-root"></div>
+    <div id="loader">
+      <div class="loading-spinner"></div>
+    </div>
 
-  <script>
-    function initWidget() {
-      if (typeof OrdersCalendarWidget !== 'undefined') {
-        // Standalone режим
-        new OrdersCalendarWidget().renderWidget();
-      } else if (typeof AmoCRM !== 'undefined') {
-        // Режим amoCRM
-        AmoCRM.widgets.load('script.js').then(function() {
-          if (typeof OrdersCalendarWidget !== 'undefined') {
-            new OrdersCalendarWidget().callbacks.render();
-          }
-        });
+    <script>
+      function handleWidgetError(error) {
+        console.error("Widget error:", error);
+        document.getElementById("widget-root").innerHTML = `
+        <div class="error-message">
+          <h3>Ошибка загрузки виджета</h3>
+          <p>${error.message || "Неизвестная ошибка"}</p>
+        </div>
+      `;
       }
-    }
 
-    // Проверяем загружен ли API amoCRM
-    if (typeof AmoCRM !== 'undefined') {
-      initWidget();
-    } else {
-      document.addEventListener('DOMContentLoaded', function() {
-        let attempts = 0;
-        const interval = setInterval(function() {
-          attempts++;
-          if (typeof AmoCRM !== 'undefined') {
-            clearInterval(interval);
-            initWidget();
-          } else if (attempts > 10) {
-            clearInterval(interval);
-            console.warn('AmoCRM API not loaded');
+      function initWidget() {
+        try {
+          // Проверяем режим работы
+          if (typeof AmoCRM !== "undefined") {
+            // Режим amoCRM
+            AmoCRM.widgets
+              .load("script.js")
+              .then(() => {
+                if (typeof OrdersCalendarWidget !== "undefined") {
+                  new OrdersCalendarWidget().callbacks.render();
+                } else {
+                  throw new Error("OrdersCalendarWidget not defined");
+                }
+              })
+              .catch(handleWidgetError);
+          } else {
+            // Standalone режим
+            const script = document.createElement("script");
+            script.src = "script.js";
+            script.onload = () => {
+              if (typeof OrdersCalendarWidget !== "undefined") {
+                new OrdersCalendarWidget().renderWidget();
+              } else {
+                handleWidgetError(
+                  new Error("OrdersCalendarWidget not defined")
+                );
+              }
+            };
+            script.onerror = () =>
+              handleWidgetError(new Error("Failed to load script.js"));
+            document.head.appendChild(script);
           }
-        }, 300);
+        } catch (error) {
+          handleWidgetError(error);
+        }
+      }
+
+      // Запускаем инициализацию после полной загрузки страницы
+      document.addEventListener("DOMContentLoaded", function () {
+        // Проверяем доступность API amoCRM
+        if (typeof AmoCRM !== "undefined") {
+          initWidget();
+        } else {
+          // Ждем загрузки API с таймаутом
+          const maxAttempts = 10;
+          let attempts = 0;
+
+          const checkAPI = setInterval(() => {
+            attempts++;
+            if (typeof AmoCRM !== "undefined") {
+              clearInterval(checkAPI);
+              initWidget();
+            } else if (attempts >= maxAttempts) {
+              clearInterval(checkAPI);
+              initWidget(); // Пробуем в standalone режиме
+            }
+          }, 300);
+        }
       });
-    }
-  </script>
-</body>
+    </script>
+  </body>
 </html>
