--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Календарь заказов</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- Добавляем crossorigin атрибут для CORS -->
-    <script
-      src="https://cdn.amocrm.ru/v2/loader.min.js"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Замените на актуальный URL загрузчика -->
+    <script src="https://cdn.amocrm.com/v2/loader.min.js"></script>
+    <!-- Добавляем RequireJS для AMD-модулей -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
   </head>
   <body>
     <div id="widget-root"></div>
@@ -18,74 +17,58 @@
     </div>
 
     <script>
-      function handleWidgetError(error) {
-        console.error("Widget error:", error);
+      function showError(message) {
         document.getElementById("widget-root").innerHTML = `
         <div class="error-message">
           <h3>Ошибка загрузки виджета</h3>
-          <p>${error.message || "Неизвестная ошибка"}</p>
+          <p>${message}</p>
         </div>
       `;
       }
 
-      function initWidget() {
+      function initStandaloneWidget() {
         try {
-          // Проверяем режим работы
-          if (typeof AmoCRM !== "undefined") {
-            // Режим amoCRM
-            AmoCRM.widgets
-              .load("script.js")
-              .then(() => {
-                if (typeof OrdersCalendarWidget !== "undefined") {
-                  new OrdersCalendarWidget().callbacks.render();
-                } else {
-                  throw new Error("OrdersCalendarWidget not defined");
-                }
-              })
-              .catch(handleWidgetError);
+          // Проверяем, что класс виджета определен
+          if (typeof OrdersCalendarWidget !== "undefined") {
+            new OrdersCalendarWidget().renderWidget();
           } else {
-            // Standalone режим
-            const script = document.createElement("script");
-            script.src = "script.js";
-            script.onload = () => {
-              if (typeof OrdersCalendarWidget !== "undefined") {
-                new OrdersCalendarWidget().renderWidget();
-              } else {
-                handleWidgetError(
-                  new Error("OrdersCalendarWidget not defined")
-                );
-              }
-            };
-            script.onerror = () =>
-              handleWidgetError(new Error("Failed to load script.js"));
-            document.head.appendChild(script);
+            showError("Класс виджета не определен. Проверьте script.js");
           }
-        } catch (error) {
-          handleWidgetError(error);
+        } catch (e) {
+          showError("Ошибка инициализации: " + e.message);
         }
       }
 
-      // Запускаем инициализацию после полной загрузки страницы
-      document.addEventListener("DOMContentLoaded", function () {
-        // Проверяем доступность API amoCRM
+      // Основная функция инициализации
+      function initWidget() {
+        // Режим amoCRM
         if (typeof AmoCRM !== "undefined") {
-          initWidget();
-        } else {
-          // Ждем загрузки API с таймаутом
-          const maxAttempts = 10;
-          let attempts = 0;
-
-          const checkAPI = setInterval(() => {
-            attempts++;
-            if (typeof AmoCRM !== "undefined") {
-              clearInterval(checkAPI);
-              initWidget();
-            } else if (attempts >= maxAttempts) {
-              clearInterval(checkAPI);
-              initWidget(); // Пробуем в standalone режиме
-            }
-          }, 300);
+          AmoCRM.widgets
+            .load("script.js")
+            .then(() => {
+              if (typeof OrdersCalendarWidget !== "undefined") {
+                new OrdersCalendarWidget().callbacks.render();
+              } else {
+                showError(
+                  "Виджет не загрузился. Проверьте консоль для деталей."
+                );
+              }
+            })
+            .catch((e) => showError(e.message));
         }
+        // Standalone режим
+        else {
+          // Загружаем script.js через RequireJS
+          require(["script.js"], initStandaloneWidget, function (err) {
+            showError("Ошибка загрузки скрипта: " + err.requireModules);
+          });
+        }
+      }
+
+      // Запускаем после загрузки страницы
+      document.addEventListener("DOMContentLoaded", function () {
+        // Даем 3 секунды на загрузку API amoCRM
+        setTimeout(initWidget, 3000);
       });
     </script>
   </body>
