--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.amocrm.com/v2/loader.min.js"></script>
+    <script src="script.js"></script>
 
     <meta
       http-equiv="Content-Security-Policy"
